--- a/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
@@ -61,9 +61,9 @@
                 <h:panelGroup layout="block" styleClass="" pt:uk-filter="target: .js-filter">
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center "  >
                         <li uk-filter-control=".transcrip" uk-tooltip="Video" class="uk-active uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/morado.svg" width="70" height="70"  alt="" styleClass="uk-border-circle uk-animation-shake"/></li>
-                        <li uk-filter-control=".listening" uk-tooltip="Listening" class="uk-animation-toggle  " tabindex="0"><h:graphicImage library="img" name="mounstro/naranja.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".match" uk-tooltip="Match" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/naranja.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
                         <li uk-filter-control=".order-words" uk-tooltip="Order Words" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
-                        <li uk-filter-control=".answer" uk-tooltip="Transcript" class="uk-animation-toggle " tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".answer" uk-tooltip="Transcript" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
                     </ul>
 
                     <ul class="js-filter  uk-text-center" >
@@ -77,9 +77,8 @@
                                </div>
                            </h:panelGroup>
                         </li>
-                        <li class="listening  uk-margin-small-top ">
-                            <h1 class="uk-text-center lescuadron" style="color: white">Coloca la respuesta correctas</h1>
-
+                        <li class="match uk-margin-small-top ">
+                            <h1 class="uk-text-center lescuadron" style="color: white">Relacionar respuesta</h1>
                             <h:panelGroup layout="block" styleClass="uk-grid padre contenedor-matching" pt:uk-grid="">
                                 <div class="columna-pregunta uk-width-expand">
                                     <table class="tabla-ordenar uk-table-middle">
@@ -264,10 +263,6 @@
                     data.source.disabled = true;
                 }
             }
-        </script>
-        <script type="text/javascript">
-           palabrasRemover = document.querySelectorAll('.arrastrar .remover')
-            if (var i =0)
         </script>
 
     </ui:define>
