--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -45,13 +45,12 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-13.css"/>
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
+            <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}" styleClass="respuesta-13"/>
             <div class="uk-container padding-contenedor fondo-13" >
-                <h:form id="formulario-mapamental" styleClass="uk-form-horizontal">
-                    <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
-                    <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-2@m caja-padre-5" pt:uk-grid="">
-                        <div class="caja-mapa-uno uk-position-relative">
+                <h:form id="formulario-mapamental" styleClass="uk-grid contenedor-formularios uk-visible@m" pt:uk-grid="">
+                        <div class="caja-mapa-uno uk-position-relative uk-width-1-2@m caja-padre-5">
                             <div class="uk-position-absolute formulario-verde">
-                                <div class="uk-margin-large">
+                                <div class="uk-form-horizontal uk-margin-large">
                                     <div class="uk-margin">
                                         <label class="uk-form-label " for="verde-1"><span class="label-13">1</span></label>
                                         <div class="uk-form-controls">
@@ -120,9 +119,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="caja-mapa-dos uno uk-position-relative">
+                        <div class="caja-mapa-dos uno uk-position-relative uk-width-1-2@m caja-padre-5">
                             <div class="uk-position-absolute formulario-amarillo">
-                                <div class="uk-margin-large">
+                                <div class="uk-form-horizontal uk-margin-large">
                                     <div class="uk-margin">
                                         <label class="uk-form-label " for="amarillo-1"><span class="label-13">1</span></label>
                                         <div class="uk-form-controls">
@@ -191,7 +190,7 @@
                                 </div>
                             </div>
                             <div class="uk-position-absolute formulario-morado">
-                                <div class="uk-margin-large">
+                                <div class="uk-form-horizontal uk-margin-large">
                                     <div class="uk-margin">
                                         <label class="uk-form-label " for="morado-1"><span class="label-13">1</span></label>
                                         <div class="uk-form-controls">
@@ -260,9 +259,8 @@
                                 </div>
                             </div>
                         </div>
-                    </h:panelGroup>
-                    <div class="caja-mapa-tres ">
-                        <div class="uk-margin-large formulario-azul">
+                         <div class="caja-mapa-tres uk-width-1-1@m uk-margin-remove-top">
+                        <div class="uk-form-horizontal uk-margin-large formulario-azul">
                             <div class="uk-margin">
                                 <label class="uk-form-label " for="azul-1"><span class="label-13">1</span></label>
                                 <div class="uk-form-controls">
@@ -335,6 +333,151 @@
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                      action="#{mapaMentalControlador.respondeMapaMental}"/>
                 </h:form>
+<!--                Version para Moviles-->
+                <h:form styleClass="contenedor-formularios uk-hidden@m">
+                    <div class=" uk-position-relative ">
+                        <div class="formulario-verde color-verde uk-padding-small">
+                            <div class="uk-form-horizontal uk-margin-large">
+                                <div class="uk-margin">
+                                    <label class="uk-form-label " for="verde-1"><span class="label-13">1</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="verde-1" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="verde-2"><span class="label-13">2</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="verde-2" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="verde-3"><span class="label-13">3</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="verde-3" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="verde-4"><span class="label-13">4</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="verde-4" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="verde-5"><span class="label-13">5</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="verde-5" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="uk-position-relative ">
+                        <div class="formulario-amarillo color-naranja uk-padding-small">
+                            <div class="uk-form-horizontal uk-margin-large">
+                                <div class="uk-margin">
+                                    <label class="uk-form-label " for="amarillo-1"><span class="label-13">1</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="amarillo-1" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="amarillo-2"><span class="label-13">2</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="amarillo-2" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="amarillo-3"><span class="label-13">3</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="amarillo-3" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="amarillo-4"><span class="label-13">4</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="amarillo-4" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="amarillo-5"><span class="label-13">5</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="amarillo-5" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class=" formulario-morado color-morado uk-padding-small">
+                            <div class="uk-form-horizontal uk-margin-large">
+                                <div class="uk-margin">
+                                    <label class="uk-form-label " for="morado-1"><span class="label-13">1</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="morado-1" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="morado-2"><span class="label-13">2</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="morado-2" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="morado-3"><span class="label-13">3</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="morado-3" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="morado-4"><span class="label-13">4</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="morado-4" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="morado-5"><span class="label-13">5</span></label>
+                                    <div class="uk-form-controls">
+                                        <input class="uk-input" id="morado-5" type="text" placeholder="Some text..."/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="caja-mapa-tres uk-width-1-1@m uk-margin-remove-top">
+                        <div class="uk-form-horizontal uk-margin-large color-azul uk-padding-small">
+                            <div class="uk-margin">
+                                <label class="uk-form-label " for="azul-1"><span class="label-13">1</span></label>
+                                <div class="uk-form-controls">
+                                    <input class="uk-input" id="azul-1" type="text" placeholder="Some text..."/>
+                                </div>
+                            </div>
+                            <div class="uk-margin">
+                                <label class="uk-form-label" for="azul-2"><span class="label-13">2</span></label>
+                                <div class="uk-form-controls">
+                                    <input class="uk-input" id="azul-2" type="text" placeholder="Some text..."/>
+                                </div>
+                            </div>
+                            <div class="uk-margin">
+                                <label class="uk-form-label" for="azul-3"><span class="label-13">3</span></label>
+                                <div class="uk-form-controls">
+                                    <input class="uk-input" id="azul-3" type="text" placeholder="Some text..."/>
+                                </div>
+                            </div>
+                            <div class="uk-margin">
+                                <label class="uk-form-label" for="azul-4"><span class="label-13">4</span></label>
+                                <div class="uk-form-controls">
+                                    <input class="uk-input" id="azul-4" type="text" placeholder="Some text..."/>
+                                </div>
+                            </div>
+                            <div class="uk-margin">
+                                <label class="uk-form-label" for="azul-5"><span class="label-13">5</span></label>
+                                <div class="uk-form-controls">
+                                    <input class="uk-input" id="azul-5" type="text" placeholder="Some text..."/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </h:form>
+
             </div>
         </div>
     </ui:define>
