--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -103,7 +103,7 @@
                         <li class="transcrip">
                            <h:panelGroup styleClass="uk-grid" pt:uk-grid="">
                                <div class="uk-width-1-2@m tam-contenido uk-padding-remove-left">
-                                   <div id="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal"></div>
+                                   <div data-video="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal"></div>
                                </div>
                                <div id="scrollTranscript" class="uk-width-1-2@m uk-text-justify transcrip-contenedor tam-contenido scroll-alumno letra-guion borde-guion transcripcion">
                                    <h:outputText value="#{actividadAlumnoControlador.transcripcion}" escape="false"/>
@@ -177,26 +177,14 @@
                             </ul>
                         </li>
                         <li class="answer">
-                            <h:panelGroup layout="block" styleClass="uk-child-width-1-2@m uk-grid" pt:uk-grid="">
-                                <h:panelGroup layout="block" >
-                                    <h:panelGroup layout="block" styleClass=" contenedor-respuesta" >
-                                        <h:graphicImage library="img" styleClass="marciano" name="mounstro/verde.svg" />
-                                        <h:panelGroup layout="block" styleClass="uk-sortable respuestas-matching" pt:uk-sortable="group: respuesta">
-                                            <div class="respuesta-drag">uno</div>
-                                            <div class="respuesta-drag">dos</div>
-                                            <div class="respuesta-drag">tres</div>
-                                            <div class="respuesta-drag">cuatro</div>
-                                            <div class="respuesta-drag">cinco</div>
-                                            <div class="respuesta-drag">seis</div>
-                                            <div class="respuesta-drag">siete</div>
-                                            <div class="respuesta-drag">ocho</div>
-                                            <div class="respuesta-drag">nueve</div>
-                                        </h:panelGroup>
-                                    </h:panelGroup>
-                                </h:panelGroup>
+                            <h:panelGroup layout="block" styleClass="uk-child-width-1-3@m uk-grid" pt:uk-grid="">
+                                <div data-video="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal"></div>
                                 <div class="trancript-contenedor arrastrar scroll-drag uk-text-justify remplazar ">
                                     <h:outputText value="#{actividadAlumnoControlador.transcripcion}" escape="false"/>
                                 </div>
+                                <h:panelGroup layout="block" >
+                                    <h:panelGroup layout="block" styleClass="uk-sortable contenedor-respuesta" pt:uk-sortable="group: respuesta"/>
+                                </h:panelGroup>
                             </h:panelGroup>
                         </li>
                     </ul>
@@ -205,20 +193,22 @@
             </div>
         </div>
         <script type="application/javascript">
-            var videoPlayer = document.querySelector('.scrollFinal');
+            var videoPlayer = document.querySelectorAll('.scrollFinal');
             var player;
             function onYouTubeIframeAPIReady() {
-                console.log(videoPlayer, videoPlayer.getAttribute('id'));
-                player = new YT.Player( videoPlayer, {
-                    height: '100%',
-                    width: '100%',
-                    videoId: videoPlayer.getAttribute('id'),
-                    events: {
-                        'onReady': onPlayerReady,
-                        'onStateChange': onPlayerStateChange
-                    }
+                videoPlayer.forEach(function (video) {
+                    console.log(video.dataset.video);
+                    player = new YT.Player( video, {
+                        height: '100%',
+                        width: '100%',
+                        videoId: video.dataset.video,
+                        events: {
+                            'onReady': onPlayerReady,
+                            'onStateChange': onPlayerStateChange
+                        }
+                    });
                 });
-            }
+            };
 
             function onPlayerReady(event) {
                 console.log(event, 'Evento Listo!!');
@@ -306,12 +296,33 @@
                 }
             }
         </script>
-        <script type="text/javascript">
-            document.querySelectorAll('.remplazar .remover').forEach(function (value) {
-                value.setAttribute("uk-sortable","group: respuesta");
-                value.setAttribute('class','uk-sortable respuesta-transcript');
-                value.innerHTML=" ";
-            });
+        <script type="application/javascript">
+            var transcripcion = document.querySelector('.answer');
+            agregaRespuestas(transcripcion.querySelector('.contenedor-respuesta'));
+
+            function agregarImagen() {
+                etiqueta = document.createElement('img');
+                etiqueta.src = "/tecolotl/javax.faces.resource/mounstro/verde.svg.xhtml?ln=img";
+                etiqueta.classList.add("marciano");
+                etiqueta.style.touchAction = "none";
+                return etiqueta;
+            }
+
+            function agregaRespuestas(elemento) {
+                respuestas = [];
+                transcripcion.querySelectorAll('.remplazar .remover').forEach(function (palabra) {
+                    respuestas.push(palabra.textContent);
+                    palabra.setAttribute("uk-sortable","group: respuesta");
+                    palabra.setAttribute('class','uk-sortable respuesta-transcript');
+                    palabra.innerHTML=" ";
+                });
+                revolver(respuestas).forEach(function (resp) {
+                    respuesta = document.createElement('div');
+                    respuesta.classList.add('respuesta-drag');
+                    respuesta.textContent = resp;
+                    elemento.appendChild(respuesta);
+                });
+            }
         </script>
     </ui:define>
 </ui:composition>
