--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -170,6 +170,54 @@
                     </ul>
 
                 </div>
+                <div>
+                    <ul class="uk-subnav uk-subnav-pill" uk-switcher="">
+                        <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades">
+                            <li ><a href="#">#{actividades.idActividad}</a></li>
+                        </ui:repeat>
+                    </ul>
+
+                    <ul class="uk-switcher uk-margin">
+                        <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades">
+                            <li>
+                                <h:panelGroup  styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
+                                    <div>
+                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{alumno['grammar']}; pos: right"/>
+                                            <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="60" max="100"/></div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0" >
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['listening']}; pos: right "  />
+                                            <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color2" value="60" max="100"/></div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0">
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['reading']}; pos: right "  />
+                                            <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color3" value="60" max="100"/></div>
+                                        </div>
+                                    </div>
+                                </h:panelGroup>
+                                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-2@m uk-grid" pt:uk-grid="">
+                                    <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
+                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0">
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['writing']}; pos: right "/>
+                                            <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color4" value="60" max="100"/></div>
+                                        </div>
+                                    </div>
+                                    <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
+                                        <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mental.map']}; pos: right "/>
+                                            <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
+                                        </div>
+                                    </div>
+                                </h:panelGroup>
+                            </li>
+                        </ui:repeat>
+                    </ul>
+                </div>
 
             </div>
         </div>
